[gd_scene load_steps=39 format=2]

[ext_resource path="res://assets/pixil-frame-0 (5).png" type="Texture" id=1]
[ext_resource path="res://assets/pixil-layer-Background (68).png" type="Texture" id=2]
[ext_resource path="res://assets/pixil-layer-Background (11).png" type="Texture" id=3]
[ext_resource path="res://assets/pixil-layer-Background (12).png" type="Texture" id=4]
[ext_resource path="res://assets/pixil-layer-Background (20).png" type="Texture" id=5]
[ext_resource path="res://assets/pixil-layer-Background (78).png" type="Texture" id=6]
[ext_resource path="res://assets/pixil-layer-Background (24) (1).png" type="Texture" id=7]
[ext_resource path="res://assets/pixil-layer-Background (23).png" type="Texture" id=8]
[ext_resource path="res://assets/fundo.png" type="Texture" id=9]
[ext_resource path="res://assets/pixil-layer-Background (21).png" type="Texture" id=10]
[ext_resource path="res://assets/pixil-layer-Background (30).png" type="Texture" id=11]
[ext_resource path="res://assets/pixil-layer-Background (79).png" type="Texture" id=12]
[ext_resource path="res://assets/pixil-layer-Background (25).png" type="Texture" id=13]
[ext_resource path="res://assets/pixil-layer-Background (22).png" type="Texture" id=14]
[ext_resource path="res://assets/pixil-layer-Background (72).png" type="Texture" id=15]
[ext_resource path="res://assets/pixil-layer-Background (28).png" type="Texture" id=16]
[ext_resource path="res://assets/pixil-layer-Background (9).png" type="Texture" id=17]
[ext_resource path="res://Musicas/Batalha_-[AudioTrimmer.com].wav" type="AudioStream" id=18]
[ext_resource path="res://assets/pixil-layer-Background (10).png" type="Texture" id=19]
[ext_resource path="res://assets/pixil-layer-Background (53).png" type="Texture" id=20]
[ext_resource path="res://assets/pixil-layer-Background (52).png" type="Texture" id=21]
[ext_resource path="res://src/respostas.gd" type="Script" id=22]
[ext_resource path="res://assets/pixil-layer-Background (49).png" type="Texture" id=23]
[ext_resource path="res://assets/pixil-layer-Background (36).png" type="Texture" id=24]
[ext_resource path="res://assets/pixil-layer-Background (67) (2).png" type="Texture" id=25]
[ext_resource path="res://assets/pixil-layer-Background (70).png" type="Texture" id=26]
[ext_resource path="res://assets/pixil-layer-Background (69).png" type="Texture" id=27]
[ext_resource path="res://assets/pixil-layer-Background (37).png" type="Texture" id=28]
[ext_resource path="res://fontes/DeterminationMonoWebRegular-Z5oq.ttf" type="DynamicFontData" id=29]
[ext_resource path="res://fontes/DeterminationSansWebRegular-369X.ttf" type="DynamicFontData" id=30]
[ext_resource path="res://assets/dialogo_direita.png" type="Texture" id=31]

[sub_resource type="DynamicFont" id=3]
extra_spacing_char = 1
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=5]
extra_spacing_char = 1
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=6]
extra_spacing_char = 1
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=7]
size = 21
extra_spacing_char = 1
font_data = ExtResource( 30 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "tremer1"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -125, 0 ), Vector2( 0, 0 ), Vector2( 125, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 21
font_data = ExtResource( 29 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 22 )

[node name="tela_escura2" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 483.5, 277 )
scale = Vector2( 16.59, 8.74 )
texture = ExtResource( 8 )

[node name="Button1" type="TouchScreenButton" parent="."]
position = Vector2( 310, 413 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 25 )
pressed = ExtResource( 2 )

[node name="Button2" type="TouchScreenButton" parent="."]
position = Vector2( 667, 413 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 25 )
pressed = ExtResource( 2 )

[node name="Button3" type="TouchScreenButton" parent="."]
position = Vector2( 667, 505 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 25 )
pressed = ExtResource( 2 )

[node name="Button4" type="TouchScreenButton" parent="."]
position = Vector2( 310, 505 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 25 )
pressed = ExtResource( 2 )

[node name="botao_fake1" type="TouchScreenButton" parent="."]
position = Vector2( 310, 413 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 25 )
pressed = ExtResource( 2 )

[node name="botao_fake2" type="TouchScreenButton" parent="."]
position = Vector2( 667, 413 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 25 )
pressed = ExtResource( 2 )

[node name="botao_fake3" type="TouchScreenButton" parent="."]
position = Vector2( 667, 505 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 25 )
pressed = ExtResource( 2 )

[node name="botao_fake4" type="TouchScreenButton" parent="."]
position = Vector2( 310, 505 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 25 )
pressed = ExtResource( 2 )

[node name="botao_acerto1" type="TouchScreenButton" parent="."]
position = Vector2( 310, 413 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 26 )

[node name="botao_erro1" type="TouchScreenButton" parent="."]
position = Vector2( 310, 413 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 27 )

[node name="botao_acerto2" type="TouchScreenButton" parent="."]
position = Vector2( 667, 413 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 26 )

[node name="botao_erro2" type="TouchScreenButton" parent="."]
position = Vector2( 667, 413 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 27 )

[node name="botao_acerto3" type="TouchScreenButton" parent="."]
position = Vector2( 667, 505 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 26 )

[node name="botao_erro3" type="TouchScreenButton" parent="."]
position = Vector2( 667, 505 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 27 )

[node name="botao_erro4" type="TouchScreenButton" parent="."]
position = Vector2( 310, 505 )
scale = Vector2( 1.2, 1 )
normal = ExtResource( 27 )

[node name="botao_pause" type="TouchScreenButton" parent="."]
position = Vector2( 935, 30 )
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 6 )
pressed = ExtResource( 12 )

[node name="RichTextLabel1" type="RichTextLabel" parent="."]
margin_left = 326.0
margin_top = 422.0
margin_right = 656.0
margin_bottom = 508.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[b] é não coletar, armazenar, compartilhar, ou realizar qualquer outra forma
de tratamento de dados pessoais ou sensíveis sem se certificar de estar alinhado com
diretrizes e políticas.[/b]"
text = " é não coletar, armazenar, compartilhar, ou realizar qualquer outra forma
de tratamento de dados pessoais ou sensíveis sem se certificar de estar alinhado com
diretrizes e políticas."

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 678.0
margin_top = 421.0
margin_right = 1008.0
margin_bottom = 507.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[b] é não coletar, armazenar, compartilhar, ou realizar qualquer outra forma
de tratamento de dados pessoais ou sensíveis sem se certificar de estar alinhado com
diretrizes e políticas.[/b]"
text = " é não coletar, armazenar, compartilhar, ou realizar qualquer outra forma
de tratamento de dados pessoais ou sensíveis sem se certificar de estar alinhado com
diretrizes e políticas."

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 674.0
margin_top = 510.0
margin_right = 1017.0
margin_bottom = 585.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 322.0
margin_top = 513.0
margin_right = 662.0
margin_bottom = 585.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 6 )

[node name="Button5" type="TouchScreenButton" parent="."]
position = Vector2( 352, 110 )
normal = ExtResource( 31 )

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
margin_left = 361.0
margin_top = 113.0
margin_right = 691.0
margin_bottom = 235.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true

[node name="fibrinha" type="Sprite" parent="."]
position = Vector2( 139, 482 )
scale = Vector2( 0.363147, 0.391969 )
texture = ExtResource( 5 )

[node name="shokinho" type="Sprite" parent="."]
position = Vector2( 810, 287 )
scale = Vector2( 0.88, 0.875849 )
texture = ExtResource( 1 )

[node name="fundo" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 512, 299 )
texture = ExtResource( 9 )
normal_map = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="coracao1" type="Sprite" parent="."]
position = Vector2( 40, 40 )
texture = ExtResource( 17 )

[node name="coracao2" type="Sprite" parent="."]
position = Vector2( 100, 40 )
texture = ExtResource( 17 )

[node name="coracao3" type="Sprite" parent="."]
position = Vector2( 160, 40 )
texture = ExtResource( 17 )

[node name="coracao4" type="Sprite" parent="."]
position = Vector2( 220, 40 )
texture = ExtResource( 17 )

[node name="coracao_vazio1" type="Sprite" parent="."]
position = Vector2( 40, 40 )
texture = ExtResource( 19 )

[node name="coracao_vazio2" type="Sprite" parent="."]
position = Vector2( 100, 40 )
texture = ExtResource( 19 )

[node name="coracao_vazio3" type="Sprite" parent="."]
position = Vector2( 160, 40 )
texture = ExtResource( 19 )

[node name="coracao_vazio4" type="Sprite" parent="."]
position = Vector2( 220, 40 )
texture = ExtResource( 19 )

[node name="tela_escura" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 299 )
scale = Vector2( 10.3, 6 )
texture = ExtResource( 8 )

[node name="continuar" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 400, 150 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )

[node name="volume" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 400, 220 )
normal = ExtResource( 7 )
pressed = ExtResource( 13 )

[node name="etica" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 400, 290 )
normal = ExtResource( 14 )
pressed = ExtResource( 10 )

[node name="volume_on" type="Sprite" parent="."]
visible = false
position = Vector2( 610, 250 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="volume_off" type="Sprite" parent="."]
visible = false
position = Vector2( 610, 250 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 16 )

[node name="game_over" type="Sprite" parent="."]
visible = false
position = Vector2( 511, 300 )
texture = ExtResource( 23 )

[node name="reiniciar" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 364, 414 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 20 )
pressed = ExtResource( 21 )

[node name="musica_batalha" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )

[node name="contiaire" type="TouchScreenButton" parent="."]
position = Vector2( 902, 518 )
normal = ExtResource( 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/tremer1 = SubResource( 2 )

[node name="prosseguir" type="TouchScreenButton" parent="."]
position = Vector2( 902, 518 )
normal = ExtResource( 24 )
pressed = ExtResource( 28 )

[node name="balao_fibrinha" type="Sprite" parent="."]
position = Vector2( 405, 359 )
texture = ExtResource( 15 )

[node name="fala_fibrinha" type="RichTextLabel" parent="."]
margin_left = 263.0
margin_top = 293.0
margin_right = 582.0
margin_bottom = 407.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 8 )
text = "Eu vou acertar todas Choquinho, se prepare!!"

[connection signal="released" from="Button1" to="." method="_on_Button1_released"]
[connection signal="released" from="Button2" to="." method="_on_Button2_released"]
[connection signal="released" from="Button3" to="." method="_on_Button3_released"]
[connection signal="released" from="Button4" to="." method="_on_Button4_released"]
[connection signal="released" from="botao_pause" to="." method="_on_botao_pause_released"]
[connection signal="released" from="continuar" to="." method="_on_continuar_released"]
[connection signal="released" from="volume" to="." method="_on_volume_released"]
[connection signal="released" from="etica" to="." method="_on_etica_released"]
[connection signal="released" from="reiniciar" to="." method="_on_reiniciar_released"]
[connection signal="released" from="contiaire" to="." method="_on_contiaire_released"]
[connection signal="released" from="prosseguir" to="." method="_on_prosseguir_released"]
